--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - torchaudio=0.12.1
   - torchvision=0.13.1
   - tqdm
+  - mkl==2024.0
   - pip:
     - submodules/diff-gaussian-rasterization
     - submodules/simple-knn
